--- a/index.html
+++ b/index.html
@@ -46,20 +46,22 @@
 			<h3>(Respective to the order of the features above)</h3>
 			<p>Allows the easy transportation of items like medication, water, and food to the user. <br> Allows S.I.G.M.A. to identify what is on the tray based on the tray identification feature. <br> Gives the temperature to the user incase major heat causes heat strokes for that person. <br> Prevents the robot from running into puddles and breaking down due to a short circuit. (Robot protection) <br> The robot will stop at red tape as it signifies a dangerous or off limit area. (Safety and privacy protection)</p>
 			<h2>Important Facts:</h2>
-			<p>Built for one half of the year, the robot was built as a prototype assistant for people who are less fortunate. Using a lego EV3, the group that made me (S.I.G.M.A) turned the robot into a household delivery bot. Right now, what it could do is deliver items from one part of the house to the other using markers. This way, people who for some reason need assistance to get items from another room could get it anytime easily. <br> Example of uses:</p> 
-			<ol>
-				<li>Once nurse is gone, robot could deliver food.</li>
-				<li>The nurse does not have to stay and could leave things for person. Then, once they want it, they could just order it from the robot.</li>
-				<li>The person who is being served could get certain items from certain rooms whenever they want it.</li>
-			</ol>
-			<ul>
-				<li>This is not a complete robot and is not ready to be used in homes.</li>
-				<li>Markers need to be included to guide the robot. It serves as a path, and the robot will only follow it to certain places depending on the order it is following from the user’s remote.</li>
-				<li>The remote will be on the robot in this case, but in the real robot it would be detached.</li>
-				<li>The robot will have a temperature sensor to make sure the household temperatures are good to live in. If the house is too cold or hot, the robot will alert the user to turn down or up the temperature.</li>
-				<li>The robot is designed to not go to any ‘stop zone’.</li>
-			</ul>
+			<p>Built for one half of the year, the robot was built as a prototype assistant for people who are less fortunate. Using a lego EV3, the group that made me (S.I.G.M.A) turned the robot into a household delivery bot. Right now, what it could do is deliver items from one part of the house to the other using markers. This way, people who for some reason need assistance to get items from another room could get it anytime easily.<p>
 		</center>
+		<p>Example of uses:</p>
+		<ol>
+			<li>If a nurse is gone, robot could deliver food.</li>
+			<li>The nurse does not have to stay and could leave things for person. Then, once they want it, they could just order it from the robot.</li>
+			<li>The person who is being served could get certain items from certain rooms whenever they want it.</li>
+		</ol>
+		<p>Extra info:</p>
+		<ul>
+			<li>This is not a complete robot and is not ready to be used in homes.</li>
+			<li>Markers need to be included to guide the robot. It serves as a path, and the robot will only follow it to certain places depending on the order it is following from the user’s remote.</li>
+			<li>The remote will be on the robot in this case, but in the real robot it would be detached.</li>
+			<li>The robot will have a temperature sensor to make sure the household temperatures are good to live in. If the house is too cold or hot, the robot will alert the user to turn down or up the temperature.</li>
+			<li>The robot is designed to not go to any ‘stop zone’.</li>
+		</ul>
 	</div>
 </body>
 </html>
