--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 		<a href = "#about">About</a>
 	    </li>
 	    <li class = "navbar" style = "float: right;">
+		<img src = "Concept Project SIGMA 2.png " height = "40px">
+	    </li>
+	    <li class = "navbar" style = "float: right;">
 		<a href = "http://q-quad.github.io">Quad DEVELOPMENT Project</a>
+	    </li>
 	    <li class = "navbar" style = "float: right;">
 		<a href = "http://emoti-con.org">Emoti-Con 2017 Project</a>
 	    </li>
