--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<a href = "http://q-quad.github.io">Quad DEVELOPMENT Project</a>
 	    </li>
 	    <li class = "navbar" style = "float: right;">
-		<a href = "http://emoti-con.org">Emoti-Con 2017 Project</a>
+		<a href = "http://emoti-con.org">Emoti-Con 2017 "Most Innovative" Project</a>
 	    </li>
 	    <li class = "navbar" style = "float: right;">
 		<img src = "Concept Project SIGMA 2.png " height = "40px">
